# pandas-rose

./: .gitignore  .readthedocs.yml  HOW_TO_RELEASE.md  LICENSE  README.md  demo.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: release-and-publish.yml  release.yml
docs/: index.md  tutorial.ipynb
docs/stylesheets/: extra.css
rose/: __init__.py  _version.py  snippets.py
sample_data/: WBB.csv
tests/: test_rose.py
